setting up multiple scss

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,7 @@
-@use "../node_modules/bootstrap/scss/bootstrap";
+@use "jumbotron.scss";
 // @use "../node_modules/bootstrap/scss/variables";
 
-.caro-back {
 
-    background-color: bootstrap.$indigo;
-
-}
 
 
 
