--- a/src/components/skillscarousel/skills_carousel.scss
+++ b/src/components/skillscarousel/skills_carousel.scss
@@ -1,6 +1,4 @@
-@use "../node_modules/bootstrap/scss/bootstrap";
+@use "../../../node_modules/bootstrap/scss/bootstrap";
 .caro-back {
-
     background-color: bootstrap.$indigo;
-
 }
