Expericence Cards Hover

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @use "components/skillscarousel/skills_carousel";
+@use "components/experiencecards/experience_cards";
 // @use "../node_modules/bootstrap/scss/variables";
 
 
