--- a/src/styles.css
+++ b/src/styles.css
@@ -11122,4 +11122,50 @@ textarea.form-control-lg {
   background-color: #6610f2;
 }
 
+/* for the image */
+.photo-container {
+  position: relative;
+  width: 19rem;
+  margin-top: 5%;
+}
+
+.photo-container:hover .overlay {
+  opacity: 1;
+}
+
+.isaiah {
+  width: 19em !important;
+  height: 19em !important;
+  border-radius: 50%;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: white;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: 0.69s ease;
+  border-radius: 50%;
+}
+
+.linked-in-img {
+  width: 72% !important;
+  height: auto;
+  margin-top: 15%;
+}
+
+.card {
+  transition: transform 0.2s ease;
+}
+
+.card:hover {
+  transform: scale(1.05);
+}
+
 /*# sourceMappingURL=styles.css.map */
