--- a/FrontEndResume/src/styles.scss
+++ b/FrontEndResume/src/styles.scss
@@ -1,3 +1,4 @@
 @use "components/skillscarousel/skills_carousel";
 @use "components/experiencecards/experience_cards";
+@use "components/mynavbar/contact-btn.scss";
 // @use "../node_modules/bootstrap/scss/variables";
