Youtube Videos are up now

--- a/FrontEndResume/src/styles.scss
+++ b/FrontEndResume/src/styles.scss
@@ -5,3 +5,7 @@
 // @use "../node_modules/bootstrap/scss/mixins";
 @use "components/section-cards/section_cards.scss";
 
+iframe{
+    width: 100%;
+}
+
